Fix next/prev buttons for long text on mobile

--- a/themes/burns-exhibits/assets/sass/prev-next-nav.scss
+++ b/themes/burns-exhibits/assets/sass/prev-next-nav.scss
@@ -33,8 +33,8 @@
     }
 }
 
+/* Transform the previous and next links into buttons on mobile */
 @media (max-width: #{map-get($grid-breakpoints, "md")}) {
-
     a.next-link,
     a.prev-link {
         position: absolute;
@@ -45,6 +45,9 @@
         width: 100%;
         box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.2);
         background: #f3f5f4;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
     form.mobile-menu {
